* add contract binding * category endpoint with cache * update swagger & readme
